<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--Container Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="android.com.gorentjoy.ui.fragments.UserProfileFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_header"
            android:textColor="@color/grayButtonColor"
            android:textSize="@dimen/text_sub_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_half_margin"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_half_margin"
            android:text="@string/profile_header1"
            android:textSize="@dimen/sub_header_1_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_half_margin"
            android:background="@android:color/darker_gray" />;

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editlayoutphoneid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editphoneid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_mobile"
                android:inputType="phone"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editlayoutaddphoneid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editaddphoneid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_addmobile"
                android:inputType="phone"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editlayoutaddressid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editaddressid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_address"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:maxLines="3"
                android:minLines="3" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editlayoutpinid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editpinid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_pin"
                android:inputType="number"
                android:maxLength="8" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnsaveid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_half_margin"
            android:text="@string/btn_profile_caption"
            android:theme="@style/MyButton"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>