<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/textcateid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_ad_cate"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/textlocationid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/add_ad_location"
                android:theme="@style/MyButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_half_margin"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/minText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/search_min" />

                <TextView
                    android:id="@+id/maxText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/search_max" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <SeekBar
                    android:id="@+id/minSeek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight=".5"
                    android:max="500" />

                <SeekBar
                    android:id="@+id/maxSeek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight=".5"
                    android:max="10000" />

            </LinearLayout>

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_data_available"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:visibility="gone" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/card_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>